# Distributed_File_System

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  Metadata_Example  PROPOSAL.md  README.md  dfs_benchmark.py  dfs_throughput_test.py  docker-compose.yml  launch_dfs.sh  users.json
.github/workflows/: rust.yml
src/chunk/: chunk.rs  chunk_manager.rs  heartbeat_manager.rs
src/client/: chunk_client.rs  chunk_server_client.rs  main.rs  master_client.rs
src/master/: chunk_manager.rs  heartbeat_manager.rs  log_manager.rs  main.rs  namespace_manager.rs  safe_map.rs
src/shared/: heartbeat.rs  log_manager.rs  master_chunk_utils.rs  master_client_utils.rs  mod.rs
