[package]
name = "project"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
env_logger = "0.11.5"
log = "0.4.22"
rocket = {version = "0.5.1", features = ["json", "serde_json"]}
serde = "1.0.215"
serde_json = "1.0.133"
sysinfo = "0.32.0"
uuid = {version = "1.11.0", features = ["v4", "v7"]}

[lib]
name = "lib"
path = "src/lib.rs"


[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "chunk"
path = "src/chunk/chunk.rs"
