[package]
name = "project"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "master"
path = "src/master/main.rs"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
[dependencies.uuid]
version = "1.11.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]